# patterns

./: .gitignore  CMakeLists.txt  README.md  flake.nix
fig/nvim/: init.lua
src/: main.cc
src/strategy/: duck.cc  duck.h  fly_behavior.h  mallard_duck.cc  mallard_duck.h  quack_behavior.h  rubber_duck.cc  rubber_duck.h
src/strategy/behaviors/: fly_behavior.h  fly_cannot.h  fly_wings.h  quack_behavior.h  quack_normal.h  quack_squeak.h
